# agent-harness-repo-doc-governance

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: audit.yml  pytest.yml
src/repo_doc_governance/: __init__.py  app.py  cli.py  llm_runtime.py  models.py  orchestrator.py  phases.py  pr_builder.py  pr_creator.py  safety.py  state.py
src/repo_doc_governance/phase_impls/: __init__.py  _diff.py  _llm_output.py  _observability.py  _prompts.py  _utils.py  agent_instructions.py  code_first.py  drift_audit.py  handoff.py  pr_handoff.py  readme.py  stale_artifacts.py  survey.py  verification.py
src/repo_doc_governance/prompts/: .gitkeep  decisions.md  phases.md  skill_body.md  templates.md
tests/: conftest.py  test_app.py  test_cli.py  test_config_env_loading.py  test_import.py  test_imports.py  test_llm_output_helpers.py  test_llm_runtime.py  test_observability.py  test_orchestrator.py  test_phase4_preserve_edit_integration.py  test_phase_agent_instructions.py  test_phase_code_first.py  test_phase_drift_audit.py  test_phase_handoff.py  test_phase_readme.py  test_phase_stale_artifacts.py  test_phase_survey.py  test_phase_verification.py  test_pr_builder.py  test_safety_invariants.py
